# GuitarTrainer

./: .gitignore  CMakeLists.txt  README.md
rsc/: wavTestData.txt
src/: .OnsetDetectionFunction.cpp.swp  .RhythmModule.cpp.swp  ArticulationAmplitude.cpp  ArticulationAmplitude.hpp  ArticulationLength.cpp  ArticulationLength.hpp  BeatFinder.cpp  BeatFinder.hpp  CMakeLists.txt  Exercise.cpp  Exercise.hpp  FFT.cpp  FFT.hpp  Note.hpp  OnsetDetectionFunction.cpp  OnsetDetectionFunction.hpp  Rhythm.cpp  Rhythm.hpp  RhythmModule.cpp  RhythmModule.hpp  Segment.cpp  Segment.hpp  TempoFinder.cpp  TempoFinder.hpp  Tone.cpp  Tone.hpp  ToneModule.cpp  ToneModule.hpp  WavHandler.cpp  WavHandler.h  a.out  main.cpp  tmp.cpp  tmp.h
src/UI/: abc.bnd  bundle.proto  bundle_pb2.py  changed.py  main.py
src/UI/UI/: mainWindow.ui  mainWindow_ui.py  prettyMain.ui  prettyMain_ui.py  prettyResults.ui  prettyResults_ui.py  res.qrc  resultsui.ui  resultsui_ui.py
src/UI/UI/images/: res.py  res.qrc  res2.py  res2.qrc  res2_rc.py  res_rc.py
src/proto/: CMakeLists.txt  track.proto
test/: .gitignore  CMakeLists.txt  articulationAmplitudeTest.cpp  articulationLengthTest.cpp  e2eTest.cpp  exerciseTest.cpp  fftTest.cpp  main.cpp  rhythmTest.cpp  tmpTest.cpp  toneTest.cpp  wavTest.cpp
